@@ -2,21 +2,18 @@ package com.mas6y6.musmeta.core;
 
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
 import com.mas6y6.musmeta.config.*;
-import org.jaudiotagger.audio.AudioFileIO;
 import org.slf4j.Logger;
 
-import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Comparator;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.TreeMap;
 
 /**
- * Holds the music library (songs and their album/disc assortment) and
+ * Holds the music library (albums and their disc/song assortment) and
  * handles persisting it to the config through its {@link ConfigCodec}.
  */
 public class Library {
@@ -33,13 +30,12 @@ public class Library {
     private static final String CONFIG_KEY = "data";
     private static final int FORMAT_VERSION = 1;
 
-    private static final ConfigCodec<Library> CODEC = ConfigCodec.of(
+    public static final ConfigCodec<Library> CODEC = ConfigCodec.of(
             Library::serialize,
             Library::decodeFrom
     );
 
-    private final ArrayList<Album> albums = new ArrayList<>();
-    private final Map<String, Album> albumsByTitle = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+    private final TreeMap<String, Album> albums = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
     private final ArrayList<MissingSong> missingSongs = new ArrayList<>();
 
     private static final Library INSTANCE = new Library();
@@ -58,104 +54,114 @@ public class Library {
     }
 
     public List<Album> getAlbums() {
-        return albums.stream()
-                .sorted(Comparator
-                        .comparingLong(Album::getCreatedAt).reversed()
-                        .thenComparing(Album::getTitle, String.CASE_INSENSITIVE_ORDER))
-                .toList();
+        return List.copyOf(albums.values());
     }
 
     public Map<String, Album> getAlbumsByTitle() {
-        return Map.copyOf(albumsByTitle);
+        return Collections.unmodifiableMap(albums);
+    }
+
+    public Album getAlbum(String title) {
+        if (title == null) {
+            return null;
+        }
+        return albums.get(title);
     }
 
     public boolean containsAlbum(String title) {
-        return albumsByTitle.containsKey(title);
+        return title != null && albums.containsKey(title);
+    }
+
+    public void registerAlbum(Album album) {
+        Objects.requireNonNull(album, "Album cannot be null");
+        albums.put(album.getTitle(), album);
+    }
+
+    public void renameAlbum(Album album, String newTitle) {
+        Objects.requireNonNull(album, "Album cannot be null");
+        Objects.requireNonNull(newTitle, "New album title cannot be null");
+        albums.entrySet().removeIf(entry -> entry.getValue() == album);
+        album.setTitle(newTitle);
+        albums.put(newTitle, album);
+        save();
+    }
+
+    public void removeAlbum(String title) {
+        if (title != null) {
+            albums.remove(title);
+            save();
+        }
     }
 
     public List<Song> getSongs() {
-        ArrayList<Song> songs = new ArrayList<>();
-        for (Album album : albums) {
-            songs.addAll(album.getSongs());
+        ArrayList<Song> allSongs = new ArrayList<>();
+        for (Album album : albums.values()) {
+            allSongs.addAll(album.getSongs());
         }
-        return List.copyOf(songs);
+        return List.copyOf(allSongs);
     }
 
     public List<MissingSong> getMissingSongs() {
-        return List.copyOf(missingSongs);
+        ArrayList<MissingSong> result = new ArrayList<>(missingSongs);
+        for (Album album : albums.values()) {
+            for (Disc disc : album.getDiscs()) {
+                for (String path : disc.getMissingSongPaths()) {
+                    result.add(new MissingSong(path, album.getTitle(), disc.getDiscIndex()));
+                }
+            }
+        }
+        return List.copyOf(result);
     }
 
     /**
-     * Adds a song and places it into its album and disc (iTunes-style).
+     * Adds a song to the library, placing it into the album declared by its tags.
      */
     public void addSong(Song song) {
         Objects.requireNonNull(song, "Song cannot be null");
-
-        Album album = albumsByTitle.computeIfAbsent(song.getAlbum(), title -> {
-            Album created = new Album(title);
-            albums.add(created);
-            return created;
-        });
-
+        String albumTitle = song.getAlbum();
+        Album album = albums.computeIfAbsent(albumTitle, Album::new);
         album.addSong(song);
     }
 
     public void clear() {
         albums.clear();
-        albumsByTitle.clear();
         missingSongs.clear();
+    }
+
+    public void removeSong(Song song) {
+        if (song == null) {
+            return;
+        }
+        for (Album album : new ArrayList<>(albums.values())) {
+            album.removeSong(song);
+            if (album.getSongs().isEmpty()) {
+                albums.remove(album.getTitle());
+            }
+        }
+    }
+
+    public void reorganizeSong(Song song) {
+        removeSong(song);
+        addSong(song);
     }
 
     void replaceWith(Library other) {
         clear();
         if (other != null) {
-            for (Album album : other.getAlbums()) {
-                registerAlbum(album);
-            }
+            albums.putAll(other.albums);
             missingSongs.addAll(other.missingSongs);
         }
     }
 
-    public void registerAlbum(Album album) {
-        if (albumsByTitle.containsKey(album.getTitle())) {
-            throw new IllegalArgumentException("Album with title '" + album.getTitle() + "' already exists");
-        }
-
-        albumsByTitle.put(album.getTitle(), album);
-        albums.add(album);
-    }
-
     private static void serialize(Library library, ConfigBuilder builder) {
-        JsonArray albumsArray = new JsonArray();
-
-        for (Album album : library.getAlbums()) {
-            JsonObject albumObject = new JsonObject();
-            albumObject.addProperty("title", album.getTitle());
-            albumObject.addProperty("createdAt", album.getCreatedAt());
-
-            Path artworkPath = album.getArtworkPath();
-            if (artworkPath != null) {
-                albumObject.addProperty("artworkPath", artworkPath.toString());
-            }
-
-            JsonArray discsArray = new JsonArray();
-            for (Disc disc : album.getDiscs()) {
-                JsonObject discObject = new JsonObject();
-                discObject.addProperty("index", disc.getDiscIndex());
-                discObject.addProperty("total", disc.getDiscTotal());
-
-                JsonArray songsArray = new JsonArray();
-                for (Song song : disc.getSongs()) {
-                    songsArray.add(song.getAudioFile().getFile().getAbsolutePath());
-                }
-                discObject.add("songs", songsArray);
-                discsArray.add(discObject);
-            }
-            albumObject.add("discs", discsArray);
-            albumsArray.add(albumObject);
-        }
-
         builder.setInt("version", FORMAT_VERSION);
+
+        JsonArray albumsArray = new JsonArray();
+        for (Album album : library.albums.values()) {
+            ConfigBuilder albumBuilder = new ConfigBuilder();
+            Album.CODEC.encode(album, albumBuilder);
+            albumsArray.add(albumBuilder.toJsonObject());
+        }
         builder.set("albums", albumsArray);
     }
 
@@ -171,70 +177,15 @@ public class Library {
             if (!albumElement.isJsonObject()) {
                 continue;
             }
-            JsonObject albumObject = albumElement.getAsJsonObject();
-
-            String title = albumObject.has("title")
-                    ? albumObject.get("title").getAsString()
-                    : "Unknown Album";
-
-            Path artworkPath = null;
-            if (albumObject.has("artworkPath")) {
-                String raw = albumObject.get("artworkPath").getAsString();
-                if (raw != null && !raw.isBlank()) {
-                    artworkPath = Path.of(raw);
-                }
+            ConfigBuilder albumBuilder = ConfigBuilder.from(albumElement.getAsJsonObject());
+            Album album = Album.CODEC.decode(albumBuilder);
+            if (album != null) {
+                library.albums.put(album.getTitle(), album);
             }
-
-            long createdAt = albumObject.has("createdAt")
-                    ? albumObject.get("createdAt").getAsLong()
-                    : System.currentTimeMillis();
-
-            Album album = new Album(title, artworkPath, createdAt);
-
-            JsonElement discsElement = albumObject.get("discs");
-            if (discsElement != null && discsElement.isJsonArray()) {
-                for (JsonElement discElement : discsElement.getAsJsonArray()) {
-                    if (!discElement.isJsonObject()) {
-                        continue;
-                    }
-                    JsonObject discObject = discElement.getAsJsonObject();
-
-                    int index = discObject.has("index") ? discObject.get("index").getAsInt() : 1;
-                    int total = discObject.has("total") ? discObject.get("total").getAsInt() : index;
-                    Disc disc = new Disc(index, total);
-
-                    JsonElement songsElement = discObject.get("songs");
-                    if (songsElement != null && songsElement.isJsonArray()) {
-                        for (JsonElement songElement : songsElement.getAsJsonArray()) {
-                            String path = songElement.getAsString();
-                            Song song = readSong(path);
-                            if (song == null) {
-                                library.missingSongs.add(new MissingSong(path, title, index));
-                                continue;
-                            }
-                            disc.addSong(song);
-                        }
-                    }
-                    album.addDisc(disc);
-                }
-            }
-
-            library.registerAlbum(album);
         }
 
         return library;
     }
-
-    private static Song readSong(String path) {
-        try {
-            return new Song(AudioFileIO.read(Path.of(path).toFile()));
-        } catch (Exception e) {
-            LOGGER.warn("Skipping unreadable song in saved library: {}", path);
-            return null;
-        }
-    }
-
-
 
     /**
      * Persists the library to the config through the registered codec.
@@ -259,6 +210,9 @@ public class Library {
     }
 
     private static synchronized void ensureRegistered() {
+        ConfigManager.registerCodec(Song.class, Song.CODEC);
+        ConfigManager.registerCodec(Disc.class, Disc.CODEC);
+        ConfigManager.registerCodec(Album.class, Album.CODEC);
         ConfigManager.registerCodec(Library.class, CODEC);
 
         ConfigManager configManager = ConfigManager.getInstance();
@@ -267,4 +221,6 @@ public class Library {
             config.register(CONFIG_KEY, INSTANCE, Library.class);
         }
     }
+    
+    
 }
